fix: title and text-area width

--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hearts Counter</title>
+    <title>Scores Counter</title>
   </head>
 
   <style>
     body {
-      margin: 2rem 4rem;
+      margin: 2rem 3rem;
     }
+
     p {
       font-size: 1.5rem;
+    }
+
+    textarea {
+      max-width: 100%;
     }
   </style>
   <body>
